Add images to some more older posts

--- a/_posts/2007-02-09-welcome.html
+++ b/_posts/2007-02-09-welcome.html
@@ -9,7 +9,15 @@ categories:
 - Webdev
 tags:
 - akikoo
+image:
+  path: /assets/images/social/welcome_to_akikooorg.png
 ---
-<p><img src="/assets/images/2007/02/welcome.png" class="l" alt="Welcome to akikoo.org" />After having my website online for years without any major updates, I at last found the time to design my new WordPress powered site. I have a new domain name too: <em>akikoo.org</em>.</p>
+<figure>
+  <img src="/assets/images/posts/welcome_to_akikooorg.png" alt="" />
+  <figcaption>
+    <p class="figcaption"><i>Myself as <abbr title="American Standard Code for Information Interchange">ASCII</abbr> art</i>.</p>
+  </figcaption>
+</figure>
+<p>After having my website online for years without any major updates, I at last found the time to design my new WordPress powered site. I have a new domain name too: <em>akikoo.org</em>.</p>
 <p>For the first time in a personal project, I'm using blog software -- which I find pretty useful as a <abbr title="Content Management System">cms</abbr> too. <a href="http://www.akikoo.org/feed" title="Syndicate akikoo.org (RSS 2.0)">RSS 2.0 feed</a> is available for those who can never get enough of the web.</p>
 <p>If you have any comments, don't hesitate to <a href="http://www.akikoo.org/contact" title="contact form">contact me</a>.</p>
