--- a/_posts/2009-01-11-2009-is-here.html
+++ b/_posts/2009-01-11-2009-is-here.html
@@ -11,7 +11,16 @@ tags:
 - Ubuntu
 - Webdev
 - spotify
+image:
+  path: /assets/images/social/2009_is_here.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/2009_is_here.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption"><i>
+      Photo by <a href="https://unsplash.com/@winstonchen">Winston Chen</a> on <a href="https://unsplash.com/photos/orange-and-purple-bokeh-wallpaper-FuxnBv2ULNc">Unsplash</a></i>.</p>
+  </figcaption>
+</figure>
 <p>It's already 2009 -- time sure flies! I thought I'd pick out some personal highlights of the passed year, in no particular order.</p>
 <h3>Spotify</h3>
 <p><em><a title="Homepage of Spotify" href="http://www.spotify.com">Spotify music streaming service</a></em> was launched. This is clearly a major step forward for online music distribution. I hope more and more record companies will join the service -- actually, these companies have no choice but to adapt to the new business model in order to survive. Spotify is currently invite-only, with free accounts available only in some European countries (currently UK, Finland, Sweden, Norway, Spain and France). Spotify Premium (not free) is available in many more countries, including Belgium. You can have your charts sent to <a title="last.fm" href="http://www.last.fm/user/akikoo">last.fm.</a> too.</p>
