--- a/_posts/2009-11-11-realign.html
+++ b/_posts/2009-11-11-realign.html
@@ -15,6 +15,8 @@ categories:
 tags:
 - web design
 - web development
+image:
+  path: /assets/images/social/akikooorg_realign.png
 ---
 <p>Time goes quickly -- especially on the web -- so I though it was time to <a href="http://www.alistapart.com/articles/redesignrealign/">realign</a> and give this site a new, fresh look. While streamlining the site and reorganising some of the content, I changed to <a href="http://dev.w3.org/html5/spec/Overview.html#the-doctype"><abbr title="HyperText Markup Language">HTML5</abbr> DOCTYPE</a> (using the new HTML5 structural elements, with the <a href="http://code.google.com/p/html5shiv">HTML5 IE enabling script</a>), and applied some <abbr title="Cascading Style Sheets">CSS3</abbr> enhancements for browsers that support them.</p>
 <p>Inspired by the work of many people (see <a href="http://www.alistapart.com/articles/fluidgrids/">Fluid grids</a> for example), I created a liquid 13-column symmetrical grid. By combining the columns into supercolumns, I aligned the elements to the grid structure, as illustrated in the screenshot below.</p>
