--- a/_posts/2011-11-19-one-web-boilerplate.html
+++ b/_posts/2011-11-19-one-web-boilerplate.html
@@ -9,8 +9,16 @@ categories:
 tags:
 - oneweb
 - responsive
+image:
+  path: /assets/images/social/one_web_boilerplate.jpg
 ---
-<p><a class="img-art" href="https://github.com/akikoo/one-web-boilerplate"><img alt="One Web Boilerplate on GitHub" src="/assets/images/2011/11/one-web-boilerplate.jpg"></a>Over the last year or so, I've been thinking more and more about how frontend web development processes should be structured in small and large teams. Web projects often have tight deadlines so it&rsquo;s important to have a structured approach to writing reusable code and testing modular code snippets in an optimized build environment, before deploying code to a testing or staging server. </p>
+<figure>
+  <img src="/assets/images/posts/one_web_boilerplate.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@ellaolsson">Ella Olsson</a> on <a href="https://unsplash.com/photos/assorted-fruit-and-seasoning-on-table-I-uYa5P-EgM">Unsplash</a></i>.</p>
+  </figcaption>
+</figure>
+<p>Over the last year or so, I've been thinking more and more about how frontend web development processes should be structured in small and large teams. Web projects often have tight deadlines so it&rsquo;s important to have a structured approach to writing reusable code and testing modular code snippets in an optimized build environment, before deploying code to a testing or staging server. </p>
 <h2>Modular build framework</h2>
 <p>So, with all that in mind, I've put together a <a class="boilerplate" href="https://github.com/akikoo/one-web-boilerplate">One Web Frontend Boilerplate</a>, a modular framework for building responsive (mobile first) websites with <a href="http://httpd.apache.org/docs/2.2/howto/ssi.html">Apache <abbr title="Server Side Includes">ssi</abbr></a>. It's still a work in progress, but stable enough to be used in real-world projects (it has been used already!). </p>
 <p>It draws code from many other projects, combining best practices and various solutions into a custom frontend build framework. Think of <a href="http://www.alistapart.com/articles/responsive-web-design/">Responsive web design</a>, <a href="http://html5boilerplate.com/">HTML5 Boilerplate</a>, <a href="http://html5boilerplate.com/mobile">Mobile Boilerplate</a> and <a href="http://www.stuffandnonsense.co.uk/projects/320andup/">320 and up</a> merged together, with code being written once and run anywhere on your pages with Apache <abbr title="Server Side Includes">ssi</abbr>.</p>
