--- a/_posts/2012-04-23-responsive-design-systems.html
+++ b/_posts/2012-04-23-responsive-design-systems.html
@@ -13,7 +13,15 @@ tags:
 - web
 - design
 - development
+image:
+  path: /assets/images/social/responsive_design_systems.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/responsive_design_systems.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@wgzhai">Wengang Zhai</a> on <a href="https://unsplash.com/photos/gray-and-black-wall-IcEKJ7KHZUM">Unsplash</a></i>.</p>
+  </figcaption>
+</figure>
 <p>Responsive websites that adapt to different devices are about much more than fluid grids, flexible images and media queries. These technical building blocks are used to implement responsive web sites in the viewing environment. However, they don't define how the content should be structured so that it can be accessed on any device browsing the web, including mobile phones, tablets, desktops and future devices we don't know about yet.</p>
 <p>So how should we go about it? What is the best approach to design and develop responsive websites in the post-PC digital landscape?</p>
 <h2>Pages as design systems</h2>
