--- a/_posts/2012-05-27-fluid-grid.html
+++ b/_posts/2012-05-27-fluid-grid.html
@@ -12,6 +12,14 @@ tags:
 - web
 - design
 - development
+image:
+  path: /assets/images/social/fluid_responsive_grid.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/fluid_responsive_grid.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@sampoullain">Sam Poullain</a> on <a href="https://unsplash.com/photos/boy-playing-kick-scooter-on-gray-concrete-pavement-TuAZPj1uaZs">Unsplash</a></i>.</p>
+  </figcaption>
+</figure>
 <p>There are many grid generators and frameworks out there. Many of them are really good. Most of them use a hardcoded number of columns (8, 12, 16 or whatever) with dummy ".grid-x" classes. I don't want that. What I want is a tool to generate a fluid, responsive and flexible grid system with any number of (nested) columns with custom gutter width. And I want to be able to quickly generate that grid system with my own classes (I might even use those dummy ".grid-x" classes, why not?).</p>
 <p>So I've put together one more grid generator by merging <a href="http://semantic.gs/">The Semantic Grid</a> with Trevor Davis' <a href="http://viget.com/inspire/building-a-nested-responsive-grid-with-sass-compass">Sass &amp; Compass Grid</a>. You need <a href="http://lesscss.org/">LESS CSS preprocessor</a> to use this tool. <a href="http://akikoo.github.com/Fluid-Grid/">See the Fluid Grid on GitHub</a> and play with it, to see if you can use it in your own projects. </p>
