--- a/_posts/2013-05-07-css-zen-garden.html
+++ b/_posts/2013-05-07-css-zen-garden.html
@@ -7,5 +7,13 @@ date: '2013-05-07 21:30:22 +0200'
 date_gmt: '2013-05-07 19:30:22 +0200'
 categories:
 - Webdev
+image:
+  path: /assets/images/social/css_zen_garden.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/css_zen_garden.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@a_su">Anna Sushok</a> on <a href="https://unsplash.com/photos/water-droplets-on-green-leaves-yZ6ldLZu09c">Unsplash</a></i>.</p>
+  </figcaption>
+</figure>
 <p>CSS Zen Garden <a href="http://csszengarden.com">http://csszengarden.com</a> is ten years old today, and open for submissions once more. Brings back memories. Go submit a design!</p>
