--- a/_posts/2013-05-26-front-end-workflow-with-grunt.html
+++ b/_posts/2013-05-26-front-end-workflow-with-grunt.html
@@ -8,7 +8,15 @@ date_gmt: '2013-05-26 13:22:05 +0200'
 categories:
 - Webdev
 - Accessibility
+image:
+  path: /assets/images/social/frontend_workflow_with_grunt.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/frontend_workflow_with_grunt.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@dylaraddict">Randall Honold</a> on <a href="https://unsplash.com/photos/multicolored-stair-painting-jJ8YA9xFS0k">Unsplash</a></i>.</p>
+  </figcaption>
+</figure>
 <p>I'm always trying to find new ways of making the front-end development workflow easier, faster, more structured, and more maintainable. As the web environment is becoming more complex, we need to embrace the tools and use them to help us create a good architecture that allows us to concentrate on the task at hand.</p>
 <p>Everyone has his or her own coding style and preferred ways of working. The web evolves rapidly so changing our mindsets and constantly adapting to new ways of thinking and working is a must for front-end developers.<br />
 <h2>Frameworks and Boilerplates</h2>
