--- a/_posts/2016-06-14-accessibility-testing-tools.html
+++ b/_posts/2016-06-14-accessibility-testing-tools.html
@@ -8,6 +8,14 @@ date_gmt: '2016-06-14 08:58:41 +0200'
 categories:
 - Webdev
 - Accessibility
+image:
+  path: /assets/images/social/accessibility_testing_tools.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/accessibility_testing_tools.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@jeswinthomas">Jeswin Thomas</a> on <a href="https://unsplash.com/photos/two-black-dogs-sitting-in-front-of-an-airplane-5DzV0RnpUlA">Unsplash</a></i>.</p>
+  </figcaption>
+</figure>
 <p>Designing and developing with accessibility in mind is hard. That's why people have created tools to visualize potential accessibility issues and automate some of the testing tasks. As accessibility is such a huge topic, there's no one-size-fits-all solution. We need to use multiple tools for testing accessibility, and none of these tools can fully replace human judgment. </p>
 <p>Many articles and books have been published on this topic. Over the years, I've collected some of these testing tools in a Markdown file for a quick reference for myself. I thought I'd share it, so I've created a new GitHub repository for <a href="https://github.com/akikoo/accessibility-testing-tools">Accessibility Testing Tools</a>. I hope you find this list useful!</p>
