--- a/_posts/2016-07-27-style-guide-driven-development-with-react.html
+++ b/_posts/2016-07-27-style-guide-driven-development-with-react.html
@@ -6,7 +6,15 @@ date: '2016-07-27 08:28:09 +0200'
 date_gmt: '2016-07-27 06:28:09 +0200'
 categories:
 - Webdev
+image:
+  path: /assets/images/social/style_guide_driven_development.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/style_guide_driven_development.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@birminghammuseumstrust">Birmingham Museums Trust</a> on <a href="https://unsplash.com/photos/a-painting-of-two-abstract-shapes-on-a-wall-8FNuCxFfbFw">Unsplash</a></i>.</p>
+  </figcaption>
+</figure>
 <h2>Purpose</h2>
 <p>Style guides and pattern libraries are a great collaboration and communication tool in cross-functional teams. These tools have many names and variations (see <a href="http://styleguides.io/">styleguides.io</a>), but in this post I'll just call them style guides. Essentially they break down the user interface into its component parts, and serve as a resource for new designers and developers to locate existing patterns for further use. Decoupling the UI from application data, and splitting the UI into components often results in a more consistent and efficient UI for users.</p>
 <h2>Problems</h2>
