--- a/_posts/2011-12-05-using-ant-with-mobile-first-css.html
+++ b/_posts/2011-12-05-using-ant-with-mobile-first-css.html
@@ -7,7 +7,15 @@ date: '2011-12-05 21:04:53 +0100'
 date_gmt: '2011-12-05 19:04:53 +0100'
 categories:
 - Webdev
+image:
+  path: /assets/images/social/using_ant_to_decouple_css_from_media_queries.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/using_ant_to_decouple_css_from_media_queries.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@lindiebee">Lindie Botes ✦</a> on <a href="https://unsplash.com/photos/white-concrete-wall-C3UHu2wE3Qg">Unsplash</a></i>.</p>
+  </figcaption>
+</figure>
 <p>Often you want to progressively enhance your mobile-first websites, making them responsive, but that obviously requires a fallback plan for legacy IE browsers that don&rsquo;t support CSS3 Media Queries. You also want to manage the deployment process and follow the <abbr title="Don't Repeat Yourself ">DRY</abbr> principle as much as you can. You could of course use a polyfill but that means introducing a JavaScript dependancy for layout which might not be what you want. Luckily, there are other solutions.</p>
 <p>Nicolas Gallagher recently posted a brilliant article, <a href="http://nicolasgallagher.com/mobile-first-css-sass-and-ie/">Mobile first CSS and getting Sass to help with legacy IE</a>, in which he suggests using a pre-processor to produce two versions of compiled CSS from the same core code. He is basically extending Jeremy Keith's <a href="http://adactio.com/journal/4494/">Windows mobile media queries</a> method. </p>
 <h2>Using Ant as pre-processor</h2>
