--- a/_posts/2012-02-21-accessible-patterns.html
+++ b/_posts/2012-02-21-accessible-patterns.html
@@ -8,6 +8,15 @@ date_gmt: '2012-02-20 22:20:46 +0100'
 categories:
 - Webdev
 - Accessibility
+image:
+  path: /assets/images/social/accessible_patterns.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/accessible_patterns.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption"><i>
+      Photo by <a href="https://unsplash.com/@elizabeth_woolner">Elizabeth Woolner</a> on <a href="https://unsplash.com/photos/a-laptop-computer-sitting-on-top-of-a-desk-9xxNZCJZ8bA">Unsplash</a></i>.</p>
+  </figcaption>
+</figure>
 <p>Finding accessible jQuery plugins for common user interface patterns is not always easy. There are thousands of great plugins out there, but few of them have core accessibility support built in. I don't blame authors -- accessibility is a complex area, and it's difficult to get it right as there are so many factors involved. As part of the ongoing process of creating accessible, reusable patterns and snippets, I've started <a href="https://github.com/akikoo/Accessible-Patterns">Accessible Patterns on GitHub</a>. </p>
 <p>Recently, I also <a href="https://github.com/akikoo/Pattern-Primer">forked Jeremy Keith's Pattern Primer</a> where the idea is to style reusable content snippets outside of any layout context. With <a href="https://github.com/akikoo/Accessible-Patterns">Accessible Patterns</a>, the idea is to build and maintain a library of accessible ARIA widgets, with only minimal styling. I'm taking ideas from other plugins (see credits information) but also adding new features. I hope you find the patterns useful. There's always room for improvement, so feel free to suggest changes and additions!</p>
