--- a/_posts/2019-03-05-empowered-product-teams.html
+++ b/_posts/2019-03-05-empowered-product-teams.html
@@ -6,7 +6,14 @@ categories:
 - Agile
 - Motivation
 - Teams
+image:
+  path: /assets/images/social/empowered_product_teams.jpg
 ---
-
+<figure>
+  <img src="/assets/images/posts/empowered_product_teams.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@penguinphotography">Eric & Niklas</a> on <a href="https://unsplash.com/photos/3-women-playing-musical-instruments-eCyBV7uz9JA">Unsplash</a></i>.</p>
+  </figcaption>
+</figure>
 <p><a href="https://svpg.com/empowered-product-teams/">Empowered product teams</a> - so much goodness in this article,
   especially in the sections about purpose, leadership and diversity in hiring!</p>
