Adapt GitHub URL and add action link buttons to some posts

--- a/_posts/2010-04-11-building-frontend-code-with-ant.html
+++ b/_posts/2010-04-11-building-frontend-code-with-ant.html
@@ -155,3 +155,4 @@ ant
 
 <p>Obviously, there are lots of other things you can do with Ant. There's really nothing new in this script, but it combines ideas from several articles mentioned above so I thought I'd share it here (<a href="https://github.com/akikoo/ant-build">download build.xml from GitHub</a>). I hope it can be useful for you - I know for me it will! ;)</p>
 <p><strong>Update 28 March, 2011:</strong> uploaded this build.xml file to GitHub.</p>
+<p><a class="btn btn-action" href="https://github.com/akikoo/ant-build">Ant Build on GitHub</a></p>
