--- a/_posts/2011-11-19-one-web-boilerplate.html
+++ b/_posts/2011-11-19-one-web-boilerplate.html
@@ -38,3 +38,4 @@ image:
 <p>If you have any thoughts or suggestions on how to make the framework better <a href="/contact">I'd love to hear them</a>.</p>
 <h2>UPDATE 20 November, 2011</h2>
 <p>Included <a href="https://github.com/akikoo/Pattern-Primer">my GitHub fork</a> of Jeremy Keith's <a href="http://adactio.com/journal/5028/">Pattern Primer</a>, to include common markup snippets (or atomic units of content as Jeremy calls them). The idea is to build elements from the content out, outside any layout context and external dependencies. </p>
+<p><a class="btn btn-action" href="https://github.com/akikoo/one-web-boilerplate">One Web Boilerplate on GitHub</a></p>
