--- a/_posts/2013-05-26-front-end-workflow-with-grunt.html
+++ b/_posts/2013-05-26-front-end-workflow-with-grunt.html
@@ -63,7 +63,7 @@ image:
 </ul>
 <h3>Frameworks and grids</h3>
 <ul>
-<li><a href="http://akikoo.github.com/Fluid-Grid/">Fluid Grid with Sass</a></li>
+<li><a href="http://akikoo.github.io/Fluid-Grid/">Fluid Grid with Sass</a></li>
 <li><a href="http://semantic.gs/">The Semantic Grid</a></li>
 <li><a href="http://viget.com/inspire/building-a-nested-responsive-grid-with-sass-compass">Building a Nested Responsive Grid with Sass & Compass</a></li>
 <li><a href="http://www.netmagazine.com/tutorials/building-modern-grid-system">Building a modern grid system</a></li>
