--- a/_posts/2002-06-12-ranges.html
+++ b/_posts/2002-06-12-ranges.html
@@ -16,7 +16,7 @@ image:
 <figure>
   <img src="/assets/images/posts/instruments_and_ranges.png" alt="" />
   <figcaption>
-    <p class="figcaption">Instruments and ranges, <i>compiled by Aki Kärkkäinen.</i></p>
+    <p class="figcaption">Instruments and ranges. <i>Compiled by Aki Kärkkäinen.</i></p>
   </figcaption>
 </figure>
 <p><img src="/assets/images/2002/06/ranges.png" alt="Instruments and Ranges" class="l" />Back in 1998, I created a "cheat sheet" containing the most common instruments and their ranges. The idea came after I found it too time-consuming to check the ranges in various books whenever I wanted to write music for a particular instrument. After all, it's difficult to keep everything in your head.</p>
