--- a/_posts/2002-06-13-courses.html
+++ b/_posts/2002-06-13-courses.html
@@ -16,7 +16,7 @@ image:
 <figure>
   <img src="/assets/images/posts/jyu_logo.png" alt="" />
   <figcaption>
-    <p class="figcaption"><a href="https://www.jyu.fi/en">University of Jyväskylä (Finland)</a>.</p>
+    <p class="figcaption"><i><a href="https://www.jyu.fi/en">University of Jyväskylä (Finland)</a></i></p>
   </figcaption>
 </figure>
 <p>As a humble effort to document my life, here's a list of courses included in my Master of Science (Econ.) degree -- 250 credit units all together.</p>
