--- a/_posts/2007-07-17-brosella.html
+++ b/_posts/2007-07-17-brosella.html
@@ -15,7 +15,7 @@ image:
 <figure>
     <img src="/assets/images/posts/brosella.jpg" alt="" />
     <figcaption>
-      <p class="figcaption"><a href="https://brosellafestival.be/en/">Brosella Festival, Ossegempark, Brussels, Belgium</a>.</p>
+      <p class="figcaption"><i><a href="https://brosellafestival.be/en/">Brosella Festival, Ossegempark, Brussels, Belgium</a></i>.</p>
     </figcaption>
   </figure>
 <p><a href="http://www.brosella.be/" title="Brosella Folk &amp; Jazz">Brosella Folk &amp; Jazz</a> festival is one of the highlights of summer. This year, I missed the folk (so I thought) by going there on Sunday to check out some jazz. The evening turned out to be quite "folky".</p>
