--- a/_posts/2008-01-06-newyear.html
+++ b/_posts/2008-01-06-newyear.html
@@ -17,7 +17,7 @@ image:
 <figure>
   <img src="/assets/images/posts/new_year_new_job.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">Photo by <a href="https://unsplash.com/@andknech">Andrew Knechel</a> on <a href="https://unsplash.com/photos/macro-view-of-lights-in-a-party-in-gettysburg-gG6yehL64fo">Unsplash</a>.</p>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@andknech">Andrew Knechel</a> on <a href="https://unsplash.com/photos/macro-view-of-lights-in-a-party-in-gettysburg-gG6yehL64fo">Unsplash</a></i>.</p>
   </figcaption>
 </figure>
 <p>Happy New Year! To kick off 2008, I thought I'd write a few words about blogging (and social networking). I've got a new job too, but more on that later. First of all, I find it difficult to post here regularly. The problem is not that I don't have anything to say, but rather that I don't have time to do background research when preparing articles. It's not easy for me to "just start writing". Writing requires inspiration and practice. Writing takes time -- especially when you're not a native English speaker.</p>
