--- a/_posts/2010-05-04-html5-for-web-designers.html
+++ b/_posts/2010-05-04-html5-for-web-designers.html
@@ -19,7 +19,7 @@ image:
 <figure>
   <img src="/assets/images/posts/html5_for_web_designers_book.jpg" alt="" />
   <figcaption>
-    <p class="figcaption"><a href="https://abookapart.com/products/html5-for-web-designers">HTML5 For Web Designers</a>, by Jeremy Keith and Rachel Andrew.</p>
+    <p class="figcaption"><a href="https://abookapart.com/products/html5-for-web-designers">HTML5 For Web Designers</a>, by <i>Jeremy Keith and Rachel Andrew</i>.</p>
   </figcaption>
 </figure>
 <p>HTML5 For Web Designers: <a href="http://tinyurl.com/23v2cp5" rel="nofollow">http://tinyurl.com/23v2cp5</a>. There's no mention about advanced JavaScript APIs, but I'm going to buy myself a copy!</p>
