--- a/_posts/2010-10-19-malarkey-new-book.html
+++ b/_posts/2010-10-19-malarkey-new-book.html
@@ -20,7 +20,7 @@ image:
 <figure>
   <img src="/assets/images/posts/hardboiled_web_design_book.jpg" alt="" />
   <figcaption>
-    <p class="figcaption"><a href="https://www.amazon.com/Hardboiled-Web-Design-Andy-Clarke/dp/1907828001">Hardboiled Web Design</a>, by Andy Clarke.</p>
+    <p class="figcaption"><a href="https://www.amazon.com/Hardboiled-Web-Design-Andy-Clarke/dp/1907828001">Hardboiled Web Design</a>, by <i>Andy Clarke</i>.</p>
   </figcaption>
 </figure>
 <p>Just bought @<a href="http://twitter.com/Malarkey" class="aktt_username">Malarkey</a>'s new book @<a href="http://twitter.com/itshardboiled" class="aktt_username">itshardboiled</a> (<a href="http://hardboiledwebdesign.com" rel="nofollow">http://hardboiledwebdesign.com</a>). Get it now!</p>
