--- a/_posts/2012-10-24-implementing-responsive-design.html
+++ b/_posts/2012-10-24-implementing-responsive-design.html
@@ -17,7 +17,7 @@ image:
 <figure>
   <img src="/assets/images/posts/implementing_responsive_design_book.jpg" alt="" />
   <figcaption>
-    <p class="figcaption"><a href="https://www.amazon.com/Implementing-Responsive-Design-Building-everywhere/dp/0321821688">Implementing Responsive Design</a>, by Tim Kadlec.</p>
+    <p class="figcaption"><a href="https://www.amazon.com/Implementing-Responsive-Design-Building-everywhere/dp/0321821688">Implementing Responsive Design</a>, by <i>Tim Kadlec</i>.</p>
   </figcaption>
 </figure>
 <p>In Implementing #<a href="http://search.twitter.com/search?q=%23Responsive" class="aktt_hashtag">Responsive</a> Design, <a href="http://implementingresponsivedesign.com/">http://implementingresponsivedesign.com/</a>, @<a href="http://twitter.com/tkadlec" class="aktt_username">tkadlec</a> collects all the latest #<a href="http://search.twitter.com/search?q=%23RWD" class="aktt_hashtag">RWD</a> experiments and best practices in one must-have book for all the people who make websites. Highly recommended.</p>
