--- a/_posts/2015-05-17-beagle-launched.html
+++ b/_posts/2015-05-17-beagle-launched.html
@@ -13,7 +13,7 @@ image:
 <figure>
   <img src="/assets/images/posts/beagle_logo.svg" alt="" />
   <figcaption>
-    <p class="figcaption">Beagle logo, <i>by <a href="https://petelacey.work/">Pete Lacey</a>.</i></p>
+    <p class="figcaption">Beagle logo, by <i><a href="https://petelacey.work/">Pete Lacey</a>.</i></p>
   </figcaption>
 </figure>
 <p>A few weeks ago, a small team that I'm part of at Podio launched a new product, <a href="https://getbeagle.co/">Beagle</a>, into open public beta. Beagle is a new standalone product to help agencies create more compelling proposals, faster.</p>
