--- a/_posts/2015-12-31-my-2015.html
+++ b/_posts/2015-12-31-my-2015.html
@@ -13,7 +13,7 @@ image:
 <figure>
   <img src="/assets/images/posts/my_2015.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">My colleague's drawing of me in 2015.</p>
+    <p class="figcaption"><i>My colleague's drawing of me in 2015</i>.</p>
   </figcaption>
 </figure>
 <p>I haven't written end of year accounts regularly but this time I thought I'd write one for 2015. Working as front-end developer involves lots of changes on a regular basis as the community keeps pushing the boundaries. It's been a busy year!</p>
