--- a/_posts/2019-02-11-always-be-useful.html
+++ b/_posts/2019-02-11-always-be-useful.html
@@ -10,8 +10,7 @@ image:
 <figure>
   <img src="/assets/images/posts/always_be_useful.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">
-      Photo by <a href="https://unsplash.com/@mparzuchowski">Michał Parzuchowski</a> on <a href="https://unsplash.com/photos/boy-standing-inside-closed-room-BNvk1zqEAjc">Unsplash</a>.</p>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@mparzuchowski">Michał Parzuchowski</a> on <a href="https://unsplash.com/photos/boy-standing-inside-closed-room-BNvk1zqEAjc">Unsplash</a></i>.</p>
   </figcaption>
 </figure>
 <p>I've spent a lot of time pursuing happiness and meaning in my life, but I've realized it's a moving target and that it happens in the moment. Happiness is not a goal in itself, but rather a by-product or side-effect of something else. But what is that "something else" then?</p>
