--- a/_posts/2019-05-25-mid-2019-reflections.html
+++ b/_posts/2019-05-25-mid-2019-reflections.html
@@ -14,7 +14,7 @@ image:
 <figure>
   <img src="{{site.imgpath}}/mid_2019_reflections.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">Photo by <a href="https://unsplash.com/@nickxshotz">Nicholas Green</a> on <a href="https://unsplash.com/">Unsplash</a>.</p>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@nickxshotz">Nicholas Green</a> on <a href="https://unsplash.com/">Unsplash</a></i>.</p>
   </figcaption>
 </figure>
 <p>Music, people, culture, languages and communication have been my main interests for as long as I can remember. Growing up in a musical family where two of my sisters created a career as classical pianists, playing drums gave me a sense of purpose. So, my early adult years were spent on studying music at university level and working as freelance musician and drum teacher.</p>
