--- a/_posts/2019-07-29-moving-to-malmo.html
+++ b/_posts/2019-07-29-moving-to-malmo.html
@@ -12,7 +12,7 @@ image:
 <figure>
   <img src="{{site.imgpath}}/moving_to_malmo.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">Photo by <a href="https://unsplash.com/@julianhochgesang">Julian Hochgesang</a> on <a href="https://unsplash.com/s/photos/%C3%B6resund">Unsplash</a></p>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@julianhochgesang">Julian Hochgesang</a> on <a href="https://unsplash.com/s/photos/%C3%B6resund">Unsplash</a></i>.</p>
   </figcaption>
 </figure>
 <p>After having worked in Copenhagen for about eight years, I've decided to move to Sweden, to the opposite (east) side of the Öresund bridge. Those sunsets!</p>
