--- a/_posts/2022-06-15-alistair-cockburn-and-the-elephant-carpaccio.html
+++ b/_posts/2022-06-15-alistair-cockburn-and-the-elephant-carpaccio.html
@@ -13,7 +13,7 @@ image:
 <figure>
   <img src="{{site.imgpath}}/alistair_cockburn_skatteverket.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">Alistair Cockburn talking about the Heart of Agile, before facilitating his Elephant Carpaccio exercise at Skatteverket, June 15, 2022. Photo by <i>Aki Kärkkäinen.</i></p>
+    <p class="figcaption">Alistair Cockburn talking about the Heart of Agile, before facilitating his Elephant Carpaccio exercise at Skatteverket, June 15, 2022. <i>Photo by Aki Kärkkäinen.</i></p>
   </figcaption>
 </figure>
 
