--- a/_posts/2022-06-30-last-day-at-skatteverket.html
+++ b/_posts/2022-06-30-last-day-at-skatteverket.html
@@ -14,7 +14,7 @@ image:
 <figure>
   <img src="{{site.imgpath}}/skatteverket_1.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">Skatteverket, June 30, 2022. Photo by <i>Aki Kärkkäinen.</i></p>
+    <p class="figcaption">Skatteverket, June 30, 2022. <i>Photo by Aki Kärkkäinen.</i></p>
   </figcaption>
 </figure>
 
