--- a/_posts/2022-08-31-scaling-scrum.html
+++ b/_posts/2022-08-31-scaling-scrum.html
@@ -12,8 +12,7 @@ image:
 <figure>
   <img src="{{site.imgpath}}/less_framework.png" alt="" />
   <figcaption>
-    <p class="figcaption">
-      <i>LeSS Framework</i>
+    <p class="figcaption">LeSS Framework</p>
   </figcaption>
 </figure>
 
