--- a/_posts/2007-05-18-berlin.html
+++ b/_posts/2007-05-18-berlin.html
@@ -16,7 +16,7 @@ image:
 <figure>
   <img src="/assets/images/posts/berlin.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">Glücklich am Park in Berlin (Mitte), Germany.</p>
+    <p class="figcaption">Glücklich am Park in Berlin (Mitte), Germany. <i>Photo by Aki Kärkkäinen.</i></p>
   </figcaption>
 </figure>
 <p>Before visiting Berlin for the first time in 2005, I didn't really know what to expect. Even if I had heard only positive stories about it, I thought it would be a tiring city full of ugly buildings and traffic noise (I don't really know where this impression came from; probably my ignorance). I'm so glad I was wrong - Berlin is such a nice and creative city.</p>
