--- a/_posts/2014-04-02-new-responsive-podio-blog.html
+++ b/_posts/2014-04-02-new-responsive-podio-blog.html
@@ -14,7 +14,7 @@ image:
 <figure>
   <img src="/assets/images/posts/new_responsive_podio_blog.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">The new, responsive Podio blog went live!</p>
+    <p class="figcaption"><i>The new, responsive Podio blog went live!</i></p>
   </figcaption>
 </figure>
 <p>Check out the newly redesigned, responsive @<a class="aktt_username" href="http://twitter.com/podio">Podio</a> blog: <a href="http://blog.podio.com">http://blog.podio.com</a>. You can also subscribe to it so you never miss a new post! #<a href="https://twitter.com/search?q=%23rwd" class="aktt_hashtag">RWD</a> #<a href="https://twitter.com/search?q=%23podio" class="aktt_hashtag">Podio</a></p>
