--- a/_posts/2019-01-28-focus-on-how-you-work-not-why.html
+++ b/_posts/2019-01-28-focus-on-how-you-work-not-why.html
@@ -12,7 +12,7 @@ image:
 <figure>
   <img src="/assets/images/posts/focus_on_how_you_work_not_why.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">Photo by <a href="https://unsplash.com/@knation">Kirk Morales</a> on <a href="https://unsplash.com/photos/people-playing-skateboard-on-skateboard-park-ZAKbA5CZx4w">Unsplash</a>.</p>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@knation">Kirk Morales</a> on <a href="https://unsplash.com/photos/people-playing-skateboard-on-skateboard-park-ZAKbA5CZx4w">Unsplash</a></i>.</p>
   </figcaption>
 </figure>
 <p>Start with Why, but <a href="http://www.bbc.com/capital/story/20190125-focus-on-how-you-work-not-why">the "How" is equally important</a>. Be mindful, go for a walk, and do small changes that improve your and your team's well-being and efficiency.</p>
