Add images to some more posts

--- a/_posts/2012-09-17-one-web-boilerplate-v2.html
+++ b/_posts/2012-09-17-one-web-boilerplate-v2.html
@@ -14,5 +14,13 @@ tags:
 - web
 - design
 - development
+image:
+  path: /assets/images/social/one_web_boilerplate_new_version.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/one_web_boilerplate_new_version.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">Big LEGO blocks in LEGOLAND Billund, Denmark. <i>Photo by Aki Kärkkäinen</i>.</p>
+  </figcaption>
+</figure>
 <p>New version of my #<a href="http://search.twitter.com/search?q=%23onewebboilerplate" class="aktt_hashtag">onewebboilerplate</a> on GitHub, now with #<a href="http://search.twitter.com/search?q=%23requirejs2" class="aktt_hashtag">requirejs2</a> 0, #<a href="http://search.twitter.com/search?q=%23lesscss" class="aktt_hashtag">lesscss</a> and a simplified build process: <a href="https://t.co/mkCahX3q" rel="nofollow">https://t.co/mkCahX3q</a>. </p>
