--- a/_posts/2012-10-13-one-web-boilerplate-now-with-sass.html
+++ b/_posts/2012-10-13-one-web-boilerplate-now-with-sass.html
@@ -10,5 +10,13 @@ date: '2012-10-13 19:54:02 +0200'
 date_gmt: '2012-10-13 17:54:02 +0200'
 categories:
 - Webdev
+image:
+  path: /assets/images/social/one_web_boilerplate_with_sass.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/one_web_boilerplate_with_sass.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">LEGOLAND Billund, Denmark. <i>Photo by Aki Kärkkäinen</i>.</p>
+  </figcaption>
+</figure>
 <p>New #<a class="aktt_hashtag" href="http://search.twitter.com/search?q=%23sass">sass</a> and #<a class="aktt_hashtag" href="http://search.twitter.com/search?q=%23compass">compass</a> version of my #<a class="aktt_hashtag" href="http://search.twitter.com/search?q=%23onewebboilerplate">onewebboilerplate</a>: <a rel="nofollow" href="https://github.com/akikoo/one-web-boilerplate">https://github.com/akikoo/one-web-boilerplate</a>. Also, Fluid Grid now supports #<a class="aktt_hashtag" href="http://search.twitter.com/search?q=%23sass">sass</a>: <a rel="nofollow" href="https://github.com/akikoo/Fluid-Grid">https://github.com/akikoo/Fluid-Grid</a>.</p>
