--- a/_posts/2011-11-19-one-web-boilerplate.html
+++ b/_posts/2011-11-19-one-web-boilerplate.html
@@ -15,7 +15,7 @@ image:
 <figure>
   <img src="/assets/images/posts/one_web_boilerplate.jpg" alt="" />
   <figcaption>
-    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@ellaolsson">Ella Olsson</a> on <a href="https://unsplash.com/photos/assorted-fruit-and-seasoning-on-table-I-uYa5P-EgM">Unsplash</a></i>.</p>
+    <p class="figcaption">Big LEGO blocks in LEGOLAND Billund, Denmark. <i>Photo by Aki Kärkkäinen</i>.</p>
   </figcaption>
 </figure>
 <p>Over the last year or so, I've been thinking more and more about how frontend web development processes should be structured in small and large teams. Web projects often have tight deadlines so it&rsquo;s important to have a structured approach to writing reusable code and testing modular code snippets in an optimized build environment, before deploying code to a testing or staging server. </p>
